_sass/_layout.scss
/**
 * Site header
 */
.site-header {
    border-bottom: 2px solid $grey-color-light;
    margin-bottom: 10px;

    // Positioning context for the mobile navigation icon
    position: relative;
    width: 100%;

    h1 {
        margin-left: 20px;
        margin-bottom: 0px;
        font-family: "Big Caslon", "Book Antiqua", "Palatino Linotype", Georgia, serif;
    }

    a {
        color: $text-color;

        &:hover {
            text-decoration: none;
        }
    }
}

/**
 * Site footer
 */
.site-footer {
//    border-top: 1px solid $grey-color-light;
    padding: $spacing-unit 0;
}

/**
 * Default layout
 */
#loonwerks-logo {
    img {
    }
}

#content {
    position: relative;
    width: 100%;
    min-height: 300px;
    padding: 10px 0;

    #sidebar {
        position: absolute;
        top: -10px;
        bottom: -60px;
        left: 0;
        width: 200px;

        padding-top: 20px;
        background: $grey-color-light;
        
        ul {
            list-style-type: none;
        }
    }

    #main {
        position: relative;
        margin-left: 200px;
        margin-right: 50px;

        padding: 0px 30px;
    }
}

/**
 * Person pages
 */
#person {
    #summary {
        overflow: hidden;
        width: 800px;

        #picture {
            img {
                float: left;
                margin: 10px 10px 20px 10px;
                height: 250px;

                box-shadow: 0px 0px 5px 0px rgba(117,117,117,1);
                -webkit-box-shadow: 0px 0px 5px 0px rgba(117,117,117,1);
                -moz-box-shadow: 0px 0px 5px 0px rgba(117,117,117,1);
            }
        }

        #data {
            float: left;
            padding-left: 30px;
        }
    }

    article {
        clear: both;
        margin-bottom: 20px;
    }
}

/**
 * Project pages
 */
#project {
    article {
        clear: both;
        margin-bottom: 20px;
    }
}

/**
 * People index
 */
#people {
    .separator {
        margin-top: -15px;
        margin-bottom: 15px;
        border-bottom: 2px solid $grey-color-light;
    }

    .summary {
        overflow: hidden;
        margin-bottom: 30px;
        width: 400px;

        img {
            float: left;
            height: 120px;
            margin: 10px;

            box-shadow: 0px 0px 5px -1px rgba(117,117,117,1);
            -webkit-box-shadow: 0px 0px 5px -1px rgba(117,117,117,1);
            -moz-box-shadow: 0px 0px 5px -1px rgba(117,117,117,1);
        }
        
        .text {
            margin-left: 150px;
            padding-top: 20px;
        }
    }
}

/**
 * Publications listings
 */
.publications {
    ul {
        list-style-type: none;
        
        li {
            border-bottom: 2px solid $grey-color-light;
        }

        li:last-child {
            border-bottom: none;
        }

        a {
            display: block;
            padding: 5px 5px;
        }
        
        a:hover {
            text-decoration: none;
            background: $grey-color-light;
        }
    }
}

/**
 * Publication details
 */
.publication {
    #title {
        font-size: $base-font-size * 1.5;
        float: left;
    }

    #authors {
        clear: left;
        float: left;
        font-size: $base-font-size;
    }

    #info {
        clear: left;
        float: left;
        font-size: $small-font-size;
    }

    #slides {
        font-size: $base-font-size;
        float: right;
    }

    #abstract {
        clear: both;
        border-top: 2px solid $grey-color-light;
        padding-top: 15px;
    }
}

